Wireshark is unable to display the correct IEEE802.11 MCS data rates due to header definition is unsigned 8-bit integer
This issue was migrated from bug 7134 in our old bug tracker.
Original bug information:
Reporter: Colus Tang
Status: RESOLVED FIXED
Product: Wireshark
Component: Dissection engine (libwireshark)
OS: All
Platform: All
Version: 1.7.x (Experimental)
Attachments:
wireshark-ieee80211-ratefix.patch: patch to fix tshark/wireshark to support correct IEEE802.11 MCS data rates
wireshark-airopeek-decode.pkt: Sample omnipeek capture file that is incorrect intepreted as 2Mbps instead of 130Mbps